cleanup and minor subsbml bug fixed

--- a/output-focused/main.ipynb
+++ b/output-focused/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The subsystem from models/aTc_membrane.xml has multiple compartments\n",
-      "Warning! SpeciesaTc_1 not currently used in any rules or reactions.\n",
-      "Warning! SpeciesxxcomplexL not currently used in any rules or reactions.\n",
-      "Warning! SpeciesxxaTc_complexL not currently used in any rules or reactions."
+      "The subsystem from models/aTc_membrane.xml has multiple compartments\n"
      ]
     },
     {
@@ -30,38 +27,46 @@
      "text": [
       "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\System.py:454: UserWarning: More than 1 compartments found in the Subsystem model. Check resulting models for consistency.\n",
       "  warnings.warn('More than 1 compartments found in the Subsystem model. Check resulting models for consistency.')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:613: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:611: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
       "  warnings.warn('Not all of the Subsystems being combined are in the same Compartment')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1217: UserWarning: Compartment with id cell1 does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1215: UserWarning: Compartment with id cell1 does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('Compartment with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1095: UserWarning: Removing duplicate species aTc_2_combined in the same compartment\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1093: UserWarning: Removing duplicate species aTc_2_combined in the same compartment\n",
       "  warnings.warn('Removing duplicate species {0} in the same compartment'.format(newid))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1250: UserWarning: Compartment with identifier cell1 does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1248: UserWarning: Compartment with identifier cell1 does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('Compartment with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1982: UserWarning: Warning! parameter kb does not show up in any currently defined reactions or rules.\n",
-      "  m = bioscrape.types.read_model_from_sbml(filename)\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1982: UserWarning: Warning! parameter kd does not show up in any currently defined reactions or rules.\n",
-      "  m = bioscrape.types.read_model_from_sbml(filename)\n"
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
+      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "Warning! SpeciesaTc_1 not currently used in any rules or reactions.\n",
+      "Warning! SpeciesxxcomplexL not currently used in any rules or reactions.\n",
+      "Warning! SpeciesxxaTc_complexL not currently used in any rules or reactions.\n",
       "Warning! SpeciesaTc_2_combined not currently used in any rules or reactions.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1980: UserWarning: Warning! parameter kb does not show up in any currently defined reactions or rules.\n",
+      "  m = bioscrape.types.read_model_from_sbml(filename)\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1980: UserWarning: Warning! parameter kd does not show up in any currently defined reactions or rules.\n",
+      "  m = bioscrape.types.read_model_from_sbml(filename)\n"
      ]
     }
    ],
@@ -88,60 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(results_c1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:613: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:611: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
       "  warnings.warn('Not all of the Subsystems being combined are in the same Compartment')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1217: UserWarning: Compartment with id external_1 does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1215: UserWarning: Compartment with id external does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('Compartment with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1250: UserWarning: Compartment with identifier external_1 does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1248: UserWarning: Compartment with identifier external does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('Compartment with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<libsbml.SBMLDocument; proxy of <Swig Object of type 'SBMLDocument *' at 0x0000023936E59A50> >"
+       "<libsbml.SBMLDocument; proxy of <Swig Object of type 'SBMLDocument *' at 0x0000021212504F60> >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,28 +164,6 @@
     "\n",
     "# Simulate the final_model\n",
     "simulate_rr(final_model, timepoints)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<libsbml.SBMLDocument; proxy of <Swig Object of type 'SBMLDocument *' at 0x0000023936D30DE0> >"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_ss = createSubsystem('models/lysis_ss.xml')\n",
-    "test_ss.renameSName('protein_GFP','protein_X174')\n",
-    "test_ss.renameSId('protein_GFP', 'protein_X174')"
    ]
   }
  ],
