latest changes to output_focused main.ipynb

--- a/output-focused/main.ipynb
+++ b/output-focused/main.ipynb
@@ -4,14 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\apand\\Anaconda3\\lib\\site-packages\\subsbml-0.1-py3.7.egg\\subsbml\\Subsystem.py:18: UserWarning: Package not installed : bioscrape, simulation options with bioscrape will not work.\n",
+      "C:\\Users\\apand\\Anaconda3\\lib\\site-packages\\subsbml-0.1-py3.7.egg\\subsbml\\utilityFunctions.py:17: UserWarning: Package not installed : bioscrape, simulation options with bioscrape will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "from subsbml import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,54 +28,6 @@
      "output_type": "stream",
      "text": [
       "The subsystem from models/aTc_membrane.xml has multiple compartments\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\System.py:454: UserWarning: More than 1 compartments found in the Subsystem model. Check resulting models for consistency.\n",
-      "  warnings.warn('More than 1 compartments found in the Subsystem model. Check resulting models for consistency.')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:611: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
-      "  warnings.warn('Not all of the Subsystems being combined are in the same Compartment')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1215: UserWarning: Compartment with id cell1 does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('Compartment with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1093: UserWarning: Removing duplicate species aTc_2_combined in the same compartment\n",
-      "  warnings.warn('Removing duplicate species {0} in the same compartment'.format(newid))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1248: UserWarning: Compartment with identifier cell1 does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('Compartment with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning! SpeciesaTc_1 not currently used in any rules or reactions.\n",
-      "Warning! SpeciesxxcomplexL not currently used in any rules or reactions.\n",
-      "Warning! SpeciesxxaTc_complexL not currently used in any rules or reactions.\n",
-      "Warning! SpeciesaTc_2_combined not currently used in any rules or reactions.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1980: UserWarning: Warning! parameter kb does not show up in any currently defined reactions or rules.\n",
-      "  m = bioscrape.types.read_model_from_sbml(filename)\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1980: UserWarning: Warning! parameter kd does not show up in any currently defined reactions or rules.\n",
-      "  m = bioscrape.types.read_model_from_sbml(filename)\n"
      ]
     }
    ],
@@ -88,45 +49,31 @@
     "# Simulate cell 1\n",
     "cell1_model, _ = cell1.getModel()\n",
     "timepoints = np.linspace(0,100,100)\n",
-    "results_c1, _ = Subsystem(cell1_model).simulateBioscrape(0, timepoints)"
+    "# results_c1, _ = Subsystem(cell1_model).simulateBioscrape(0, timepoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:611: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
-      "  warnings.warn('Not all of the Subsystems being combined are in the same Compartment')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1215: UserWarning: Compartment with id external does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "C:\\Users\\apand\\Anaconda3\\lib\\site-packages\\subsbml-0.1-py3.7.egg\\subsbml\\Subsystem.py:1215: UserWarning: Compartment with id external does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('Compartment with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id square_metre does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
-      "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1248: UserWarning: Compartment with identifier external does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('Compartment with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(compartment.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier square_metre does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
-      "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n"
+      "C:\\Users\\apand\\Anaconda3\\lib\\site-packages\\subsbml-0.1-py3.7.egg\\subsbml\\Subsystem.py:1248: UserWarning: Compartment with identifier external does not have a name argument. To avoid duplication, use name argument\n",
+      "  warnings.warn('Compartment with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(compartment.getId()))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<libsbml.SBMLDocument; proxy of <Swig Object of type 'SBMLDocument *' at 0x0000021212504F60> >"
+       "<SBMLDocument>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,9 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "File not found: models\\gate1.xml ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-e02dd2626b5a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcell3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cell3'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# The vesicle with the other half of the logic gate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mss2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcell2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateSubsystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'models/gate1.xml'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Creates gate1 subsystem inside cell2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mss3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcell3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateSubsystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'models/gate2.xml'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Creates gate2 subsystem inside cell3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\subsbml-0.1-py3.7.egg\\subsbml\\System.py\u001b[0m in \u001b[0;36mcreateSubsystem\u001b[1;34m(self, filename, subsystemName)\u001b[0m\n\u001b[0;32m    217\u001b[0m         \u001b[0msubsys_xml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    218\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msubsys_xml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 219\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mFileNotFoundError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'File not found: %s '\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0msubsys_xml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    220\u001b[0m         \u001b[1;31m# 1. Read the SBML model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m         \u001b[1;31m# 2. Create an object of the Subsystem class with the SBMLDocument read in Step 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: File not found: models\\gate1.xml "
+     ]
+    }
+   ],
    "source": [
     "cell2 = System('cell2') # The vesicle with one half of the logic gate\n",
     "cell3 = System('cell3') # The vesicle with the other half of the logic gate\n",
@@ -165,6 +125,13 @@
     "# Simulate the final_model\n",
     "simulate_rr(final_model, timepoints)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
