--- a/output-focused/main.ipynb
+++ b/output-focused/main.ipynb
@@ -37,8 +37,10 @@
     "external_aTc = createSubsystem('models/aTc_reservoir.xml')\n",
     "membrane1 = createSubsystem('models/aTc_membrane.xml')\n",
     "\n",
-    "ss1 = cell1.createSubsystem('models/lysis_ss.xml') # Creates ss1 in internal of cell 1\n",
+    "ss1 = cell1.createSubsystem('models/lysis_ss.xml') # Creates ss1 in internal of cell 1 (model taken from MATLAB TX-TLsim)\n",
     "\n",
+    "# Ignore the following two lines \n",
+    "# (this is just a hardcoded fix for the model - we are using GFP expression model and renaming the protein :)\n",
     "ss1.renameSName('protein_GFP','protein_X174')\n",
     "ss1.renameSId('protein_GFP', 'protein_X174')\n",
     "\n",
